# doudough

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/doudough/: __init__.py  __main__.py  app.py  charting.py  cli.py
src/doudough/pages/: balance_sheet.py  errors.py  home.py  income_statement.py  journal.py  options.py  payee_renamer.py  utils.py
src/doudough/pages/app_shell/: aside.py  controls.py  footer.py  header.py  navbar.py
tests/: test_doudough.py
